codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 761
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Charging (0s • esc to interrupt)                                              "
"                                                                                "
"                                                                                "
"› Ask xcodex to do anything                                                     "
"                                                                                "
"  ? for shortcuts · gpt-5.3-codex                            100% context left  "
