codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__thoughts_status_hidden.snap
---
source: tui/src/chatwidget/tests.rs
expression: "history_lines.join(\"\\n\")"
---
• Thoughts are currently hidden.
