codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__thoughts_toggle_hidden.snap
---
source: tui/src/chatwidget/tests.rs
expression: "history_lines.join(\"\\n\")"
---
• Thoughts hidden.
